Feature - IGW Coefficients

--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -4,6 +4,16 @@
 
 {% block content %}
     <div class="container">
-        В процессе разработки
+        <div class="row">
+            <br>
+        </div>
+        <div class="row">
+            <ul class="nav nav-tabs nav-justified">
+                <li role="presentation" class="active"><a href="#">{% trans "Load file" %}</a></li>
+                <li role="presentation" class="disabled"><a href="#">{% trans "Parse file" %}</a></li>
+                <li role="presentation" class="disabled"><a href="#">{% trans "Start" %}</a></li>
+                <li role="presentation" class="disabled"><a href="#">{% trans "Result" %}</a></li>
+            </ul>
+        </div>
     </div>
 {% endblock %}
