--- a/igwcoeffs/templates/igwcoeffs/base.html
+++ b/igwcoeffs/templates/igwcoeffs/base.html
@@ -11,37 +11,165 @@
 
     <!-- css files -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/3.3.7/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-HzUaiJdCTIY/RL2vDPRGdEQHHahjzwoJJzGUkYjHVzTwXFQ2QN/nVgX7tzoMW3Ov" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/css/bootstrap-datepicker3.min.css" rel="stylesheet" />
+
+    <style>
+        html {
+          position: relative;
+          min-height: 100%;
+        }
+
+        body {
+          margin-bottom: 50px;
+        }
+
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+
+        .logo {
+            width: 50px;
+            height: 44px;
+        }
+
+        .logo_old {
+            width: 120px;
+            height: 44px;
+        }
+
+        .lang {
+            min-width: 44px; !important;
+        }
+
+        footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            background-color:#dddddd;
+            color: #000;
+            font-size: 13px;
+            padding: 10px;
+        }
+
+        .modal-body .form-horizontal .col-sm-2,
+        .modal-body .form-horizontal .col-sm-10 {
+            width: 100%;
+        }
+
+        .modal-body .form-horizontal .control-label {
+            text-align: left;
+        }
+        .modal-body .form-horizontal .col-sm-offset-2 {
+            margin-left: 15px;
+        }
+    </style>
 
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
+    <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/js/bootstrap-datepicker.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    {% get_current_language as LANGUAGE_CODE %}
+    {% get_available_languages as LANGUAGES %}
+    {% get_language_info_list for LANGUAGES as languages %}
+    <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{% url 'igwcoeffs' %}">IGW Coefficients</a>
+                <a class="navbar-left" href="{% url 'home' %}">
+                    <img class="logo_old" src="{% static 'lmnad/logo_comp.png' %}" alt="LMNAD">
+                </a>
+                <a class="navbar-brand" href="{% url 'igwcoeffs' %}" >
+                    IGW Coefficients
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="{% url 'about_igwcoeffs' %}"> {% trans "About" %} </a></li>
-                </ul>
+              <!--ul class="nav navbar-nav">
+                <li><a href="{% url 'igwcoeffs_about' %}"> {% trans "About" %} </a></li>
+              </ul-->
+              <ul class="nav navbar-nav navbar-right">
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        {% if LANGUAGE_CODE == 'ru' %}
+                            <img src="{% static 'lmnad/flag_ru.png' %}" title="Russian">
+                        {% else %}
+                            <img src="{% static 'lmnad/flag_en.png' %}" title="English">
+                        {% endif %}
+                        <span class="caret"></span>
+                    </a>
+                    <ul class="dropdown-menu lang">
+                        <form action="{% url 'set_language' %}" method="post">
+                        {% csrf_token %}
+                        {% for language in languages %}
+                            <li>
+                                <button type="submit"
+                                    name="language"
+                                    style="border: none; padding: 5px; background: none;"
+                                    value="{{ language.code }}"
+                                    class="{% if language.code == LANGUAGE_CODE %}selected{% endif %}">
+                                    {% if language.code == 'ru' %}
+                                        <img src="{% static 'lmnad/flag_ru.png' %}" title="Russian">
+                                    {% else %}
+                                        <img src="{% static 'lmnad/flag_en.png' %}" title="English">
+                                    {% endif %}
+                                </button>
+                            </li>
+                        {% endfor %}
+                        </form>
+                    </ul>
+                  </li>
+                {% if user.is_authenticated %}
+                  <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> {{ user.username }} <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="{{ user.get_absolute_url }}">{% trans "My account" %}</a></li>
+                      <li><a href="{% url 'change_password' %}">{% trans "Change password" %}</a></li>
+                      <li role="separator" class="divider"></li>
+                      <li><a href="{% url 'logout' %}">{% trans "Log out" %}</a></li>
+                    </ul>
+                  </li>
+                {% else %}
+                    <li><a href="{% url 'register' %}">{% trans "Sign up" %}</a></li>
+                    <li><a href="{% url 'login' %}">{% trans "Log in" %}</a></li>
+                {% endif %}
+              </ul>
             </div>
         </div>
     </nav>
 
-    {% block content %}
-    {% endblock %}
+    {% if not user.is_authenticated and project.is_only_user %}
+        <div class="container">
+            <div class="row">
+                <h4>{% trans 'Access denied' %}</h4>
+                <hr>
+                <p> {% trans 'Create new user:' %}
+                    <a href="{% url 'register' %}">{% trans "Sign up" %}</a>
+                    {% trans 'or' %}
+                    <a href="{% url 'login' %}">{% trans "Log in" %}</a>
+                </p>
+            </div>
+        </div>
+    {% else %}
+        {% block content %}
+        {% endblock %}
+    {% endif %}
 
     <!-- FOOTER -->
-    <footer class="container text-center">
-        <p class="pull-left"><a href="{% url 'home' %}">{% trans "Back to LMNAD" %}</a></p>
-        <p class="pull-right"><a href="#">{% trans "Back to top" %}</a></p>
+    <footer class="container-fluid text-center">
+        <p class="pull-left"><a href="{% url 'home' %}">Back to LMNAD</a></p>
+        <p class="pull-right"><a href="#">Back to top</a></p>
         <p>© <a href="{% url 'home' %}">LMNAD</a> 2017-2018 </p>
     </footer>
 </body>
