--- a/igwcoeffs/templates/igwcoeffs/base.html
+++ b/igwcoeffs/templates/igwcoeffs/base.html
@@ -71,8 +71,7 @@
     <!-- scripts -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="//api-maps.yandex.ru/2.1/?lang=en_RU" type="text/javascript"></script>
-    <script src="{% static 'igwatlas/igwatlas.js' %}"></script>
+    <script src="{% static 'igwcoeffs/igwcoeffs.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.0/js/bootstrap-datepicker.js"></script>
 </head>
