--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -9,11 +9,25 @@
         </div>
         <div class="row">
             <ul class="nav nav-tabs nav-justified">
-                <li role="presentation" class="active"><a href="#">{% trans "Load file" %}</a></li>
-                <li role="presentation" class="disabled"><a href="#">{% trans "Parse file" %}</a></li>
-                <li role="presentation" class="disabled"><a href="#">{% trans "Start" %}</a></li>
-                <li role="presentation" class="disabled"><a href="#">{% trans "Result" %}</a></li>
+                <li role="presentation" id='load-file-tab' class="active"><a href="">{% trans "Load file" %}</a></li>
+                <li role="presentation" id='parse-file-tab' class="disabled"><a href="">{% trans "Parse file" %}</a></li>
+                <li role="presentation" id='start-tab' class="disabled"><a href="">{% trans "Start" %}</a></li>
+                <li role="presentation" id='results-tab' class="disabled"><a href="">{% trans "Result" %}</a></li>
             </ul>
+        </div>
+        <br>
+        <div class="row" id="load-file-row">
+            <form class="form-horizontal" role="form">
+                <div class="form-group">
+                    <div class="col-sm-5">
+                         <input id='load-file-input' type="file" class="form-control">
+                    </div>
+                </div>
+                <button id='submit-load-file' type="submit" class="btn btn-default">{% trans 'Load file' %}</button>
+            </form>
+        </div>
+        <div class="row" id="parse-file-row">
+            parse
         </div>
     </div>
 {% endblock %}
