--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -18,12 +18,22 @@
         <br>
         <div class="row" id="load-file-row">
             <form class="form-horizontal" role="form">
-                <div class="form-group">
-                    <div class="col-sm-5">
-                         <input id='load-file-input' type="file" class="form-control">
+                <div class="col-sm-5">
+                    <div class="form-group">
+                        <label for="load-file-input">{% trans 'File' %}</label>
+                        <input id='load-file-input' type="file" class="form-control">
                     </div>
+                    <div class="form-group">
+                        <label for="separator">{% trans 'Separator' %}</label>
+                        <select class="form-control" id="separator">
+                          <option value=" ">{% trans 'space' %}</option>
+                          <option value="/">/</option>
+                          <option value=",">,</option>
+                          <option value=";">;</option>
+                        </select>
+                    </div>
+                    <button id='submit-load-file' type="submit" class="btn btn-default">{% trans 'Load file' %}</button>
                 </div>
-                <button id='submit-load-file' type="submit" class="btn btn-default">{% trans 'Load file' %}</button>
             </form>
         </div>
         <div class="row" id="parse-file-row">
