--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -37,6 +37,7 @@
             </form>
         </div>
         <div class="row" id="parse-file-row">
+            <br>
             <div class="panel panel-default">
             <!-- Default panel contents -->
                 <div class="panel-heading">{% trans 'Loaded data' %}</div>
@@ -50,7 +51,23 @@
                     </h5>
                 </div>
                 <div class="panel-body">
-                    <p>{% trans 'Instructions' %}</p>
+                    <p>{% trans 'Need mapping field:' %}</p>
+                    <form class="form-horizontal" role="form">
+                        <div class="col-sm-5">
+                            <table class="table">
+                                <tbody id="mapping-data-table">
+                                </tbody>
+                            </table>
+                            <div class="form-group">
+                                <label for="start-from">{% trans 'Start from' %}</label>
+                                <select id='start-from' class="form-control">
+                                    <option value="0">{% trans 'first row' %}</option>
+                                    <option value="1">{% trans 'second row' %}</option>
+                                </select>
+                            </div>
+                            <button id='submit-parse-file' type="submit" class="btn btn-default">{% trans 'Parse file' %}</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
