--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -20,6 +20,10 @@
             <form class="form-horizontal" role="form">
                 <div class="col-sm-5">
                     <div class="form-group">
+                        <label for="name-calculation">{% trans 'Name of calculation' %}</label>
+                        <input id='name-calculation' type="text" class="form-control">
+                    </div>
+                    <div class="form-group">
                         <label for="load-file-input">{% trans 'File' %}</label>
                         <input id='load-file-input' type="file" class="form-control">
                     </div>
