Feature - IGW Coefficients

--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -9,10 +9,10 @@
         </div>
         <div class="row">
             <ul class="nav nav-tabs nav-justified">
-                <li role="presentation" id='load-file-tab' class="active"><a href="">{% trans "Load file" %}</a></li>
-                <li role="presentation" id='parse-file-tab' class="disabled"><a href="">{% trans "Parse file" %}</a></li>
-                <li role="presentation" id='start-tab' class="disabled"><a href="">{% trans "Start" %}</a></li>
-                <li role="presentation" id='results-tab' class="disabled"><a href="">{% trans "Result" %}</a></li>
+                <li role="presentation" id='load-file-tab'><a href="">{% trans "Load file" %}</a></li>
+                <li role="presentation" id='parse-file-tab'><a href="">{% trans "Parse file" %}</a></li>
+                <li role="presentation" id='start-tab'><a href="">{% trans "Start" %}</a></li>
+                <li role="presentation" id='results-tab'><a href="">{% trans "Result" %}</a></li>
             </ul>
         </div>
         <br>
