Feature - IGW Coefficients, calculation

--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -95,6 +95,7 @@
             </form>
         </div>
         <div class="row" id="result-row">
+            <p id="in_process">Расчёт в процессе...</p>
         </div>
     </div>
 {% endblock %}
