--- a/igwcoeffs/templates/igwcoeffs/base.html
+++ b/igwcoeffs/templates/igwcoeffs/base.html
@@ -95,9 +95,9 @@
                 </a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
-              <!--ul class="nav navbar-nav">
+              <ul class="nav navbar-nav">
                 <li><a href="{% url 'igwcoeffs_about' %}"> {% trans "About" %} </a></li>
-              </ul-->
+              </ul>
               <ul class="nav navbar-nav navbar-right">
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
