--- a/igwcoeffs/templates/igwcoeffs/send_result_email.html
+++ b/igwcoeffs/templates/igwcoeffs/send_result_email.html
@@ -1,5 +1,20 @@
-<h3>Здравствуйте!</h3>
-<div>
-    <p>Расчёт № {{ id }} завершён</p>
-    <p>Файл с результатом прикреплён</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <META HTTP-EQUIV="REFRESH" CONTENT="60">
+    <title>Расчёт № {{ id }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
+<body>
+    <div class="container">
+        <div class="row row-content">
+            <h3>Здравствуйте!</h3>
+            <div>
+                <p>Расчёт № {{ id }} завершён</p>
+                <p>Файл с результатом прикреплён</p>
+            </div>
+        </div>
+    </div>
+</body>
