Feature - IGW Coeffs

--- a/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
+++ b/igwcoeffs/templates/igwcoeffs/igwcoeffs.html
@@ -96,6 +96,7 @@
         </div>
         <div class="row" id="result-row">
             <p id="in_process">Расчёт в процессе...</p>
+            <p id="result-description">{% trans 'Your results here, also file with result send to email' %}</p>
         </div>
     </div>
 {% endblock %}
