--- a/igwcoeffs/templates/igwcoeffs/about.html
+++ b/igwcoeffs/templates/igwcoeffs/about.html
@@ -1,8 +1,14 @@
 {% extends 'igwcoeffs/base.html' %}
 {% load staticfiles %}
+{% load bootstrap_tags %}
 {% load i18n %}
 
 {% block content %}
     <div class="container">
+    <h3 class="page-header">{% trans "About" %}</h3>
+    <div class="row">
+        <div class="col-sm-4">
+            {{ about_text.text | safe  }}
+        </div>
     </div>
 {% endblock %}
