--- a/igwcoeffs/templates/igwcoeffs/about.html
+++ b/igwcoeffs/templates/igwcoeffs/about.html
@@ -5,10 +5,11 @@
 
 {% block content %}
     <div class="container">
-    <h3 class="page-header">{% trans "About" %}</h3>
-    <div class="row">
-        <div class="col-sm-12">
-            {{ about_text.text | safe  }}
+        <h3 class="page-header">{% trans "About" %}</h3>
+        <div class="row">
+            <div class="col-sm-12">
+                {{ about_text.text | safe  }}
+            </div>
         </div>
     </div>
 {% endblock %}
