Feature - Images, set shadowbox

--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -19,6 +19,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="{% static 'lmnad/app.js' %}"></script>
     <script src="{% static 'lmnad/lang.js' %}"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'shadowbox_js/shadowbox.css' %}">
+    <script type="text/javascript" src="{% static 'shadowbox_js/shadowbox.js' %}"></script>
 </head>
 <body>
 {% get_current_language as LANGUAGE_CODE %}
