Feature - publication app, new publications view on site

--- a/lmnad/templates/lmnad/base.html
+++ b/lmnad/templates/lmnad/base.html
@@ -42,7 +42,7 @@
           <ul class="nav navbar-nav">
               <li><a href="{% url 'home' %}"> {% trans "Home" %} </a></li>
               <li><a href="{% url 'people' %}"> {% trans "People" %} </a></li>
-              <li><a href="{% url 'articles' %}"> {% trans "Publication" %} </a></li>
+              <li><a href="{% url 'publications' %}"> {% trans "Publication" %} </a></li>
               <li><a href="{% url 'grants' %}"> {% trans "Grants" %} </a></li>
               <li><a href="{% url 'projects' %}"> {% trans "Projects" %}</a></li>
               <li class="dropdown">
