Feature - Publication manager, export from admin

--- a/lmnad/templates/lmnad/profile.html
+++ b/lmnad/templates/lmnad/profile.html
@@ -20,15 +20,15 @@
     {% endif %}
     </div>
 
-    {% if publications %}
         <div class="row">
         <h3 class="page-header">{% trans "Publications" %}:</h3>
         {% if user.is_authenticated %}
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#filter">
-                {% trans "Filter" %}
+                {% trans "Filter publications" %}
             </button>
         {% endif %}
         </div>
+        {% if publications %}
         <div class="row">
         <table class="table table-hover">
             <thead>
