--- a/lmnad/templates/lmnad/profile.html
+++ b/lmnad/templates/lmnad/profile.html
@@ -6,6 +6,9 @@
 {% block content %}
     <div class="row">
     <h3 class="page-header">{% trans "Profile" %}:</h3>
+    {% if profile.account.photo %}
+        <center><img src="{{ profile.account.photo.file.url }}" class="center"></center>
+    {% endif %}
     {% if profile.account.text %}
         {% if user.is_authenticated and user.id == profile.id %}
             <div>{{ profile.account.text | safe }}</div>
@@ -22,13 +25,13 @@
 
         <div class="row">
         <h3 class="page-header">{% trans "Publications" %}:</h3>
-        {% if user.is_authenticated %}
+        {% if user.is_authenticated and user.id == profile.id %}
             <button type="button" class="btn btn-success" data-toggle="modal" data-target="#filter">
                 {% trans "Filter publications" %}
             </button>
         {% endif %}
         </div>
-        {% if publications %}
+    {% if publications %}
         <div class="row">
         <table class="table table-hover">
             <thead>
@@ -128,6 +131,90 @@
                 </tr>
             {% endfor %}
             </tbody>
+        </table>
+        </div>
+    {% endif %}
+
+    {% if grants_head %}
+        <h3 class="page-header">{% trans "Head of Grants" %}:</h3>
+        <div class="row">
+        <table class="table table-hover">
+        <thead>
+            <tr>
+                <th> {% trans "Number" %} </th>
+                <th> {% trans "Type" %} </th>
+                <th> {% trans "Name" %} </th>
+                <th> {% trans "Superviser" %} </th>
+                <th> {% trans "Dates" %} </th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for grant in grants_head|dictsortreversed:"date_start" %}
+            <tr>
+                <th class="row"><a href="{{ grant.get_absolute_url }}">{{ grant.number }}</a></th>
+                <td>
+                    {{ grant.type }}
+                </td>
+                <td>
+                    {{ grant.name }}
+                </td>
+                <td>
+                    {% for head in grant.head.all %}
+                        {% if head.account %}
+                             <a href="{{ head.get_absolute_url }}">{{ head }}</a>;
+                        {% else %}
+                            {{ head }};
+                        {% endif %}
+                    {% endfor %}
+                </td>
+                <td>
+                    <p> {{ grant.date_start|date:"M. Y" }} - {{ grant.date_end|date:"M. Y" }} </p>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+        </table>
+        </div>
+    {% endif %}
+
+    {% if grants_member %}
+        <div class="row">
+        <h3 class="page-header">{% trans "Member of Grants" %}:</h3>
+        <table class="table table-hover">
+        <thead>
+            <tr>
+                <th> {% trans "Number" %} </th>
+                <th> {% trans "Type" %} </th>
+                <th> {% trans "Name" %} </th>
+                <th> {% trans "Superviser" %} </th>
+                <th> {% trans "Dates" %} </th>
+            </tr>
+        </thead>
+        <tbody>
+        {% for grant in grants_member|dictsortreversed:"date_start" %}
+            <tr>
+                <th class="row"><a href="{{ grant.get_absolute_url }}">{{ grant.number }}</a></th>
+                <td>
+                    {{ grant.type }}
+                </td>
+                <td>
+                    {{ grant.name }}
+                </td>
+                <td>
+                    {% for head in grant.head.all %}
+                        {% if head.account %}
+                             <a href="{{ head.get_absolute_url }}">{{ head }}</a>;
+                        {% else %}
+                            {{ head }};
+                        {% endif %}
+                    {% endfor %}
+                </td>
+                <td>
+                    <p> {{ grant.date_start|date:"M. Y" }} - {{ grant.date_end|date:"M. Y" }} </p>
+                </td>
+            </tr>
+        {% endfor %}
+        </tbody>
         </table>
         </div>
     {% endif %}
