--- a/lmnad/templates/lmnad/profile.html
+++ b/lmnad/templates/lmnad/profile.html
@@ -7,7 +7,7 @@
     <div class="row">
     <h3 class="page-header">{% trans "Profile" %}:</h3>
     {% if profile.account.photo %}
-        <center><img src="{{ profile.account.photo.file.url }}" class="center"></center>
+        <center><img src="{{ profile.account.photo.file.url }}" width="200" height="200" class="center"></center>
     {% endif %}
     {% if profile.account.text %}
         {% if user.is_authenticated and user.id == profile.id %}
@@ -22,15 +22,22 @@
         <p>{% trans "No information" %}</p>
     {% endif %}
     </div>
-
-        <div class="row">
-        <h3 class="page-header">{% trans "Publications" %}:</h3>
-        {% if user.is_authenticated and user.id == profile.id %}
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#filter">
-                {% trans "Filter publications" %}
-            </button>
-        {% endif %}
-        </div>
+    <div class="row">
+        <h3 class="page-header">{% trans "Publication activity" %}:</h3>
+        <p><b>{% trans "Publications" %}:</b> {{ stats.publication_count }} </p>
+        <p><b>{% trans "Conferences" %}:</b> {{ stats.conferences }} </p>
+    </div>
+    <div class="row">
+    <h3 class="page-header">{% trans "Publications" %}:</h3>
+    {% if user.is_authenticated and user.id == profile.id %}
+            <form class="form-horizontal" role="form" action="{{ profile.account.get_profile_export_url }}" method="get">
+                <button type="button" class="btn btn-success" data-toggle="modal" data-target="#filter">
+                    {% trans "Filter publications" %}
+                </button>
+                <button type="submit" class="btn btn-default">{% trans "Export to doc" %}</button>
+            </form>
+    {% endif %}
+    </div>
     {% if publications %}
         <div class="row">
         <table class="table table-hover">
