Feature - Profile, export, load cv and photo

--- a/lmnad/templates/lmnad/edit_profile.html
+++ b/lmnad/templates/lmnad/edit_profile.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h3 class="page-header">{% trans "Edit profile" %}</h3>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form.media }}
         {{ form|as_bootstrap_horizontal }}
