Feature - Add, New publication init

--- a/publications/templates/publications/page.html
+++ b/publications/templates/publications/page.html
@@ -215,7 +215,7 @@
                         {% endif %}
                         <a onclick="return showAddAnotherPopup(this);"
                            href="/publications/cite/{{ publication.id }}"
-                           class="btn btn-primary"
+                           class="btn btn-info"
                            style="width: 100px !important"
                            target="_blank">
                             {% trans 'Cite' %}
