--- a/lmnad/templates/lmnad/profile_add_publication.html
+++ b/lmnad/templates/lmnad/profile_add_publication.html
@@ -10,6 +10,11 @@
         {{ form|as_bootstrap }}
         {{ form.non_field_errors }}
         <div class="form-actions">
+          <a href="{{ profile.account.get_profile_cancel_url }}"
+                           class="btn btn-default"
+                           style="width: 100px !important">
+                            {% trans 'Cancel' %}
+          </a>
           <input type="submit" class="btn btn-primary" value="{% trans "Save" %}"/>
         </div>
     </form>
