--- a/publications/templates/publications/formsetfield.html
+++ b/publications/templates/publications/formsetfield.html
@@ -10,7 +10,7 @@
             {% for field in form %}
                 <td>
                     <div class="form-group">{{ field.label_tag }}</div>
-                    {{ field }}
+                    <div style="width: 300px">{{ field }}</div>
                 </td>
             {% endfor %}
         </tr>
