--- a/lmnad/templates/lmnad/profile_add_publication.html
+++ b/lmnad/templates/lmnad/profile_add_publication.html
@@ -5,6 +5,12 @@
 {% block content %}
 <h3 class="page-header">{% trans "Add publication" %}</h3>
     <form method="post" enctype="multipart/form-data">
+        <a href="{{ profile.account.get_profile_add_journal_url }}"
+            class="btn btn-success"
+            style="width: 150px !important"
+            target="_blank"
+            onclick="return showAddAnotherPopup(this);">{% trans 'New Journal' %}
+        </a>
         {% csrf_token %}
         {{ form.media }}
         {{ form|as_bootstrap }}
